# lubancat

./: README.md
base/: README.md
base/mobilenetv2/: export.py  pt2rknn.py  test.py
base/yolov3/: yolov3_inference.py
dev_env/: README.md
dev_env/rknn_toolkit2/examples/conversion/yolov5/: onnx_yolov5_1.npy  onnx_yolov5_2.npy  test.py
example/: README.md
example/garbage_detection/: onnx2rknn.py
example/garbage_detection/cpp/install/rk3588_linux/: taco_yolov8_seg  taco_yolov8seg_videocapture
example/garbage_detection/image/: image.txt
example/garbage_detection/taco/: dataset_info.py  taco-seg.yaml  taco2yolo.py  yolov8s-seg-taco.yaml
example/ppyoloe/: ppyoloe_to_rknn.py
example/yolov5/: README.md  onnx2rknn.py  pt2rknn.py  rknn_transfer.py  rknnlite_inference.py  test.py
example/yolov5/cpp/: CMakeLists.txt  build-linux.sh  image_utils.c  main.cc  yolov5.h  yolov5_demo.cc  yolov5_videocapture_demo.cc
example/yolov5/cpp/rknpu2/: yolov5.cc
example/yolov5_seg/: onnx2rknn.py  pt2rknn.py  test.py
example/yolov5_seg/cpp/: CMakeLists.txt  yolov5_seg.h  yolov5seg_demo.cc  yolov5seg_videocapture_demo.cc
example/yolov5_seg/cpp/rknpu2/: yolov5_seg.cc
example/yolov8/: README.md  pt2rknn.py  test.py
example/yolov8/yolov8_det/: pt2rknn.py  test.py
example/yolov8/yolov8_det/cpp/: CMakeLists.txt  build-linux.sh
example/yolov8/yolov8_det/cpp/src/: yolov8.cc  yolov8_videocapture_demo.cc
example/yolov8/yolov8_seg/: onnx2rknn.py  test.py
example/yolov8/yolov8_seg/cpp/: CMakeLists.txt  build-linux.sh  main.cc  postprocess.h  yolov8_seg.h  yolov8seg_videocapture_demo.cc
example/yolov8/yolov8_seg/cpp/rknpu2/: yolov8_seg.cc
